--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -1,3 +1,5 @@
+$bg-color-primary : #998774;
+
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +27,7 @@ a:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #998774;
+    background-color: $bg-color-primary;
     border-radius: 1cm;
     font-size: 30px;
     z-index: 1;}
