--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,9 +7,14 @@
 }
 
 #galeria .col-lg-4 {
-  padding: 20px
+  padding: 10px
 }
 
 .imagenes_bordes {
     border-radius: 1cm;
 }
+
+.videomedia {
+    border-radius: .7cm;
+}
+
