--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,10 @@ a:hover {
   width: 100%; }
 
 #galeria .col-lg-4 {
-  padding: 20px; }
+  padding: 10px; }
 
 .imagenes_bordes {
   border-radius: 1cm; }
+
+.videomedia {
+  border-radius: .7cm; }
