--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -1,5 +1,6 @@
 
-* {font-family: 'Open Sans', sans-serif;}
+* {font-family: 'Nunito', sans-serif;
+font-family: 'Open Sans', sans-serif;}
 
 .destacado {
     font-weight: bold;
