--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,17 +1,14 @@
-* {
-  font-family: 'Nunito', sans-serif;
+* {  font-family: 'Nunito', sans-serif;
   font-family: 'Open Sans', sans-serif;
-}
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;}
+
 
 .destacado {
   font-weight: bold;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
-}
 
 a:hover {
   cursor: pointer;
@@ -54,4 +51,5 @@ a:hover {
 .videomedia {
   border-radius: .7cm;
 }
+
 /*# sourceMappingURL=estilos.css.map */
