--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -52,4 +52,14 @@ a:hover {
   border-radius: .7cm;
 }
 
+.containterr:hover {
+  transform: translateY(-10px);
+  transition: 1s;
+}
+
+#menu:hover {
+    transform: translateY(-8px);
+    transition: 1s;
+}
+
 /*# sourceMappingURL=estilos.css.map */
