--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,6 +1,5 @@
 * {
-  font-family: 'Nunito', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .destacado {
