--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -29,3 +29,10 @@
 #menu:hover {
     @include animaciones()
 }
+
+.fondo:hover {
+    background-color: rgba(208, 209, 124, 0.315);
+    border-radius: 5cm;
+    transition: 1s;
+    padding:;
+}
